Migrate tests to JUnit5/Mockito/AssertJ